--- a/MusicApp_ios/Views/Genre/GenreViewController.xib
+++ b/MusicApp_ios/Views/Genre/GenreViewController.xib
@@ -1,22 +1,91 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GenreViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GenreViewController" customModule="MusicApp_ios" customModuleProvider="target">
             <connections>
+                <outlet property="backView1" destination="71f-Zg-hsM" id="fSD-yr-pcl"/>
+                <outlet property="backView2" destination="lTW-EZ-eD7" id="Z0a-BU-beK"/>
+                <outlet property="genreView" destination="CcS-CE-mUf" id="mkD-al-Uup"/>
+                <outlet property="noButton" destination="62t-uu-bQV" id="1hk-d9-H7g"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="yesButton" destination="F1C-By-2GL" id="hij-om-Oil"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="71f-Zg-hsM">
+                    <rect key="frame" x="60" y="50" width="275" height="427"/>
+                    <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lTW-EZ-eD7">
+                    <rect key="frame" x="55" y="55" width="275" height="427"/>
+                    <color key="backgroundColor" systemColor="systemGray3Color"/>
+                </view>
+                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Qpk-NJ-HYm">
+                    <rect key="frame" x="50" y="507" width="275" height="60"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F1C-By-2GL">
+                            <rect key="frame" x="0.0" y="0.0" width="133.5" height="60"/>
+                            <color key="backgroundColor" red="0.45098039220000002" green="0.87058823529999996" blue="0.64313725489999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <state key="normal" title="はい"/>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="62t-uu-bQV">
+                            <rect key="frame" x="141.5" y="0.0" width="133.5" height="60"/>
+                            <color key="backgroundColor" red="0.45098039220000002" green="0.87058823529999996" blue="0.64313725489999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <state key="normal" title="いいえ"/>
+                        </button>
+                    </subviews>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="60" id="jbq-jn-FVe"/>
+                    </constraints>
+                </stackView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CcS-CE-mUf">
+                    <rect key="frame" x="50" y="60" width="275" height="427"/>
+                    <color key="backgroundColor" systemColor="systemGray6Color"/>
+                </view>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="Qpk-NJ-HYm" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="50" id="2ak-tr-bcQ"/>
+                <constraint firstItem="lTW-EZ-eD7" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="55" id="6ha-OB-1he"/>
+                <constraint firstItem="CcS-CE-mUf" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="60" id="7G0-rM-S3v"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="71f-Zg-hsM" secondAttribute="trailing" constant="40" id="Ect-Fo-0BY"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="lTW-EZ-eD7" secondAttribute="trailing" constant="45" id="Q8h-Xq-iT3"/>
+                <constraint firstItem="lTW-EZ-eD7" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="55" id="XiF-Gl-5AE"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Qpk-NJ-HYm" secondAttribute="trailing" constant="50" id="bcO-Sm-yR3"/>
+                <constraint firstItem="Qpk-NJ-HYm" firstAttribute="top" secondItem="CcS-CE-mUf" secondAttribute="bottom" constant="20" id="eYE-eL-Kyl"/>
+                <constraint firstItem="71f-Zg-hsM" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="60" id="fCu-dH-3b2"/>
+                <constraint firstItem="71f-Zg-hsM" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="50" id="hBG-02-cXh"/>
+                <constraint firstItem="Qpk-NJ-HYm" firstAttribute="top" secondItem="71f-Zg-hsM" secondAttribute="bottom" constant="30" id="iE6-mU-rSs"/>
+                <constraint firstItem="Qpk-NJ-HYm" firstAttribute="top" secondItem="lTW-EZ-eD7" secondAttribute="bottom" constant="25" id="jGw-xu-msT"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="Qpk-NJ-HYm" secondAttribute="bottom" constant="100" id="q1J-0k-SiA"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="CcS-CE-mUf" secondAttribute="trailing" constant="50" id="xK0-a2-sgL"/>
+                <constraint firstItem="CcS-CE-mUf" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="50" id="xde-KF-9ED"/>
+            </constraints>
+            <point key="canvasLocation" x="138.40000000000001" y="65.217391304347828"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray3Color">
+            <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
