--- a/MusicApp_ios/Views/Recommned/RecommendViewController.xib
+++ b/MusicApp_ios/Views/Recommned/RecommendViewController.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RecommendViewController" customModule="MusicApp_ios" customModuleProvider="target">
             <connections>
+                <outlet property="tableView" destination="FK1-P2-YNG" id="6xw-S3-ZhW"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -18,8 +19,20 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FK1-P2-YNG">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </tableView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="FK1-P2-YNG" secondAttribute="bottom" id="0b2-Uf-jCY"/>
+                <constraint firstItem="FK1-P2-YNG" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Aan-8N-8Ww"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="FK1-P2-YNG" secondAttribute="trailing" id="KJv-jV-Vfu"/>
+                <constraint firstItem="FK1-P2-YNG" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="VtJ-v1-nRk"/>
+            </constraints>
             <point key="canvasLocation" x="139" y="104"/>
         </view>
     </objects>
