--- a/MusicApp_ios/Views/Recommned/TableViewCell/RecommendTableViewCell.xib
+++ b/MusicApp_ios/Views/Recommned/TableViewCell/RecommendTableViewCell.xib
@@ -10,15 +10,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="RecommendTableViewCell" customModule="MusicApp_ios" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RecommendTableViewCell" id="KGk-i7-Jjw" customClass="RecommendTableViewCell" customModule="MusicApp_ios" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YnL-yT-Xh5">
-                        <rect key="frame" x="20" y="0.0" width="335" height="50"/>
+                        <rect key="frame" x="20" y="10" width="335" height="50"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Agf-kr-d26">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -77,9 +77,9 @@
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="YnL-yT-Xh5" secondAttribute="bottom" id="5Io-CV-7rT"/>
+                    <constraint firstAttribute="bottom" secondItem="YnL-yT-Xh5" secondAttribute="bottom" constant="10" id="5Io-CV-7rT"/>
                     <constraint firstItem="YnL-yT-Xh5" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="ESQ-ub-N0R"/>
-                    <constraint firstItem="YnL-yT-Xh5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="LBQ-Nw-Le2"/>
+                    <constraint firstItem="YnL-yT-Xh5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="LBQ-Nw-Le2"/>
                     <constraint firstAttribute="trailing" secondItem="YnL-yT-Xh5" secondAttribute="trailing" constant="20" id="hcP-VL-48F"/>
                 </constraints>
             </tableViewCellContentView>
