--- a/MusicApp_ios/Views/ArtistDetail/ArtistDetailViewController.xib
+++ b/MusicApp_ios/Views/ArtistDetail/ArtistDetailViewController.xib
@@ -1,13 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ArtistDetailViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ArtistDetailViewController" customModule="MusicApp_ios" customModuleProvider="target">
             <connections>
+                <outlet property="tableView" destination="7y6-xp-jj3" id="QGt-Zl-qfo"/>
+                <outlet property="thumbnailImageView" destination="EwY-Zh-Wzt" id="nxV-fp-dIs"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -15,8 +20,35 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EwY-Zh-Wzt">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="200" id="qgU-PD-Mpu"/>
+                    </constraints>
+                </imageView>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7y6-xp-jj3">
+                    <rect key="frame" x="0.0" y="200" width="375" height="467"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </tableView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="EwY-Zh-Wzt" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="1ig-Zu-Iim"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="7y6-xp-jj3" secondAttribute="trailing" id="F4e-Ff-szE"/>
+                <constraint firstItem="7y6-xp-jj3" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="PsU-VO-wAt"/>
+                <constraint firstItem="EwY-Zh-Wzt" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Q7r-C9-0Gg"/>
+                <constraint firstItem="EwY-Zh-Wzt" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="d0f-Qr-Dlu"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="7y6-xp-jj3" secondAttribute="bottom" id="ere-f8-uVf"/>
+                <constraint firstItem="7y6-xp-jj3" firstAttribute="top" secondItem="EwY-Zh-Wzt" secondAttribute="bottom" id="lkZ-ad-5c3"/>
+            </constraints>
+            <point key="canvasLocation" x="138.40000000000001" y="138.98050974512745"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
