--- a/MusicApp_ios/Views/ArtistDetail/ArtistDetailViewController.xib
+++ b/MusicApp_ios/Views/ArtistDetail/ArtistDetailViewController.xib
@@ -21,7 +21,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EwY-Zh-Wzt">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EwY-Zh-Wzt">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="200" id="qgU-PD-Mpu"/>
